[scope] added scoping bug

--- a/src/SpecRunner.html
+++ b/src/SpecRunner.html
@@ -13,8 +13,10 @@
 
 
   <script src="./lectureOne/debugger.js"></script>
-
   <script src="./lectureOne/debugger.test.js"></script>
+
+  <script src="./lectureOne/scope.js"></script>
+  <script src="./lectureOne/scope.test.js"></script>
 
 </head>
 
