[math] added math tests

--- a/src/SpecRunner.html
+++ b/src/SpecRunner.html
@@ -14,10 +14,7 @@
   <!-- include source files here... -->
   <script src="lesson3/debugger.js"></script>
   <script src="lesson3/scope.js"></script>
-
-  <!-- include spec files here... -->
-  <script src="lesson3/debugger.test.js"></script>
-  <script src="lesson3/scope.test.js"></script>
+  <script src="lesson3/math.js"></script>
 
 </head>
 
