[tests] refactored the tests, to not use jasmine, but plain old js

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <body>
     <a href="./lesson1/index.html">lesson one</a>
     <a href="./lesson2/index.html">lesson two</a>
-    <a href="./SpecRunner.html">lesson three</a>
+    <a href="./lesson3/index.html">lesson three</a>
   </body>
 </html>
 
