--- a/src/lesson1/index.html
+++ b/src/lesson1/index.html
@@ -26,9 +26,9 @@
         const b = 0.3;
 
         if(a === b) {
-          console.log('its equal')
+          console.log('both values are the same')
         } else {
-          console.log('this is unequal');
+          console.log('both values are unequal');
         }
       }
 
